# atom_editor

./: CMakeLists.txt  README.md  flake.nix
source/: application.cppm  drawers.cppm  editor_layer.cpp  layers.cppm  panels.cppm
source/drawers/: camera_component_drawer.cppm  property_drawer.cppm  property_drawer_provider.cppm  sprite_component_drawer.cppm  transform_component_drawer.cppm
source/layers/: editor_layer.cppm
source/panels/: entity_explorer_panel.cppm  inspector_panel.cppm  panel.cppm
